INSPECTIT-576: Non-compilable code removed from Agent 1.4